--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0"
